2002-05-01  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* resources.ht: Link to Andrew Wilson's Mail::Address::Tagged perl
	module.

	* install.ht: Add RPM instructions for systems without a
	/usr/bin/python2.
	
2002-04-29  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* config-client.ht: Update Mutt/VVV-NNTP link.
	Warn that for mutt, sendmail_wait should not be set to -1.
	
2002-04-24  Jason R. Mastaler  <jasonrm@aguirre.la.mastaler.com>

	* results.ht (Links): Add testimonial from Moe Webber.

2002-04-23  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* config-pre.ht (suffix): Exim comments should be on their own
	line.
	
2002-04-09  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* inuse.ht (Links): Link to Mintersoft's VisualMail and NightSky
	Entertainment.
	
2002-04-05  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* resources.ht (TARGET): Link to Gmane.

2002-04-03  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* resources.ht (TARGET): Add commercial support link for Mike
	Meyer.  Remove link to tmda_confirm.pl.
	
2002-04-01  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* faq.ht: Mention collectaddys in the whitelist FAQ.

2002-03-27  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* faq.ht: New entries:
	- "Can I post to a TMDA protected mailing list with a 'dated'
	address?"
	- "How do I prevent my auto-whitelist from being filled with
	'dated' addresses?"
	
2002-03-25  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* config-client.ht: Link to Mutt/VVV-NNTP instructions.

2002-03-15  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* config-client.ht: Add dated address config for the TIN
	newsreader.
	
2002-03-01  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* config-filter.ht: Document the instruction option to the
	ok,accept,deliver incoming action.

2002-02-28  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
