@@ -1,6 +1,6 @@
 <HTML>
 <!-- THIS PAGE IS AUTOMATICALLY GENERATED.  DO NOT EDIT. -->
-<!-- Wed May  1 10:57:18 2002 -->
+<!-- Fri May  3 13:06:21 2002 -->
 <!-- USING HT2HTML 1.2 -->
 <!-- SEE http://barry.wooz.org/software/ht2html -->
 <!-- User-specified headers:
@@ -158,6 +158,14 @@ installs.
 # ./compileall
 
 </pre></blockquote>
+
+<li>TMDA is designed to run directly from its source directory.  For
+example, if installed in /usr/local/tmda-0.01/, you'd run <b>tmda-keygen</b>
+by invoking <code>/usr/local/tmda-0.01/bin/tmda-keygen</code>.  Do not
+move the bin/* programs outside the source tree, although making
+symlinks from other areas of the filesystem (such as /usr/local/bin)
+into the source tree will work fine.
+
 </ol>
 
 <u>Installation from Linux RPMs</u><br><br>
